# postit-rs

./: .tarpaulin.toml  Cargo.toml  README.md
docs/: DEVELOPMENT.md
src/: docs.rs  lib.rs
src/core/: cli.rs  config.rs  error.rs  mod.rs  postit.rs
src/docs/: docs.rs  mod.rs
src/models/: task.rs
src/persisters/: mod.rs  traits.rs
src/persisters/db/: error.rs  mod.rs  orm.rs
src/persisters/fs/: error.rs  file.rs  mod.rs  xml.rs
tests/: docs.rs  mocks.rs  mod.rs
tests/core/: config.rs  mod.rs  postit.rs
tests/docs/: mod.rs
tests/models/: task.rs
tests/persisters/: traits.rs
tests/persisters/db/: mod.rs  mongo.rs  orm.rs  sqlite.rs
tests/persisters/fs/: csv.rs  file.rs  json.rs  mod.rs  xml.rs
