[package]
name = "postit"
version = "0.2.3"
edition = "2021"
authors = ["cristianmarcosmartin1@gmail.com"]
description = "Task manager on your CLI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kerudev/postit-rs"
documentation = "https://docs.rs/postit/"
keywords = ["cli", "productivity", "todo-list"]
categories = ["command-line-utilities"]
readme = "README.md"

[features]
default = []

json = ["serde_json"]
xml = ["quick-xml"]

sqlite = ["dep:sqlite"]
mongo = ["mongodb"]

all-fs = ["json", "xml"]
all-db = ["mongo", "sqlite"]
all = ["default", "all-fs", "all-db"]

[dependencies]
colored = "2.1.0"
clap = { version = "4.5", default-features = false, features = [
	"std",
	"derive",
	"help",
	"usage",
	"error-context",
	"suggestions",
] }
dirs = "6.0.0"
thiserror = "2.0.12"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", optional = true }
quick-xml = { version = "0.37.2", features = ["serialize"], optional = true }
sqlite = { version = "0.36.1", optional = true }
mongodb = { version = "3.2.3", features = ["sync"], optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

dbg_macro = "warn"
single_match_else = "warn"
implicit_clone = "warn"
str_to_string = "warn"
wildcard_enum_match_arm = "warn"
as_conversions = "warn"
panic = "warn"
unused_trait_names = "warn"

multiple_crate_versions = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
manual_assert = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"

[[bin]]
name = "postit"
path = "src/main.rs"

[[test]]
name = "unittest"
path = "tests/mod.rs"
